# handson_ml_book

./: .gitignore  ML_env.yml  README.md  chapter2.ipynb  chapter3.ipynb  pyproject.toml  requirements.txt
